--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -1,4 +1,5 @@
 @import '../utilities/variables';
+@import '../utilities/media-queries';
 
 .navbar {
     padding: 0;
@@ -9,8 +10,8 @@
         font-family: $font;
         font-size: 20px;
     
-        .logo {
-            width: 60%;
+        .header-logo {
+            height: 100px;
         }
     
         .nav-space {
