--- a/scss/pages/_contacto.scss
+++ b/scss/pages/_contacto.scss
@@ -1,6 +1,7 @@
 @import "../utilities/variables";
 @import "../utilities/mixins";
 @import "../utilities/global";
+@import '../utilities/media-queries';
 
 
 .contacto-general {
