--- a/scss/pages/_tienda.scss
+++ b/scss/pages/_tienda.scss
@@ -2,6 +2,7 @@
 @import "../utilities/mixins";
 @import "../utilities/global";
 
+
 .tienda-bienvenidos {
     display: flex;
     justify-content: center;
@@ -42,3 +43,5 @@ h4 {
     margin-left: 20px;
     margin-bottom: 20px;
 }
+
+@import '../utilities/media-queries';
