Página tienda arreglada

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -52,6 +52,7 @@
   }
   /*TIENDA*/
   .tienda-bienvenidos {
+    margin-left: 10px;
     margin-bottom: 15px;
   }
   .tienda-bienvenidos h1 {
@@ -83,6 +84,7 @@
   }
   /*TIENDA*/
   .tienda-bienvenidos {
+    margin-left: 10px;
     margin-bottom: 15px;
   }
   .tienda-bienvenidos h1 {
@@ -106,7 +108,6 @@
   }
   .grid-container .detalles-uno h5 {
     font-size: 15px;
-    margin-bottom: 50px;
   }
   .grid-container .detalles-dos h5 {
     font-size: 15px;
@@ -242,6 +243,7 @@ body .pagina-inicio .productos .links:hover {
   }
   /*TIENDA*/
   .tienda-bienvenidos {
+    margin-left: 10px;
     margin-bottom: 15px;
   }
   .tienda-bienvenidos h1 {
@@ -273,6 +275,7 @@ body .pagina-inicio .productos .links:hover {
   }
   /*TIENDA*/
   .tienda-bienvenidos {
+    margin-left: 10px;
     margin-bottom: 15px;
   }
   .tienda-bienvenidos h1 {
@@ -296,7 +299,6 @@ body .pagina-inicio .productos .links:hover {
   }
   .grid-container .detalles-uno h5 {
     font-size: 15px;
-    margin-bottom: 50px;
   }
   .grid-container .detalles-dos h5 {
     font-size: 15px;
@@ -407,6 +409,7 @@ h4 {
   }
   /*TIENDA*/
   .tienda-bienvenidos {
+    margin-left: 10px;
     margin-bottom: 15px;
   }
   .tienda-bienvenidos h1 {
@@ -438,6 +441,7 @@ h4 {
   }
   /*TIENDA*/
   .tienda-bienvenidos {
+    margin-left: 10px;
     margin-bottom: 15px;
   }
   .tienda-bienvenidos h1 {
@@ -461,7 +465,6 @@ h4 {
   }
   .grid-container .detalles-uno h5 {
     font-size: 15px;
-    margin-bottom: 50px;
   }
   .grid-container .detalles-dos h5 {
     font-size: 15px;
@@ -582,6 +585,7 @@ h1 {
   }
   /*TIENDA*/
   .tienda-bienvenidos {
+    margin-left: 10px;
     margin-bottom: 15px;
   }
   .tienda-bienvenidos h1 {
@@ -613,6 +617,7 @@ h1 {
   }
   /*TIENDA*/
   .tienda-bienvenidos {
+    margin-left: 10px;
     margin-bottom: 15px;
   }
   .tienda-bienvenidos h1 {
@@ -636,7 +641,6 @@ h1 {
   }
   .grid-container .detalles-uno h5 {
     font-size: 15px;
-    margin-bottom: 50px;
   }
   .grid-container .detalles-dos h5 {
     font-size: 15px;
@@ -711,6 +715,7 @@ h1 {
   }
   /*TIENDA*/
   .tienda-bienvenidos {
+    margin-left: 10px;
     margin-bottom: 15px;
   }
   .tienda-bienvenidos h1 {
@@ -742,6 +747,7 @@ h1 {
   }
   /*TIENDA*/
   .tienda-bienvenidos {
+    margin-left: 10px;
     margin-bottom: 15px;
   }
   .tienda-bienvenidos h1 {
@@ -765,7 +771,6 @@ h1 {
   }
   .grid-container .detalles-uno h5 {
     font-size: 15px;
-    margin-bottom: 50px;
   }
   .grid-container .detalles-dos h5 {
     font-size: 15px;
@@ -875,6 +880,7 @@ h1 {
   }
   /*TIENDA*/
   .tienda-bienvenidos {
+    margin-left: 10px;
     margin-bottom: 15px;
   }
   .tienda-bienvenidos h1 {
@@ -906,6 +912,7 @@ h1 {
   }
   /*TIENDA*/
   .tienda-bienvenidos {
+    margin-left: 10px;
     margin-bottom: 15px;
   }
   .tienda-bienvenidos h1 {
@@ -929,7 +936,6 @@ h1 {
   }
   .grid-container .detalles-uno h5 {
     font-size: 15px;
-    margin-bottom: 50px;
   }
   .grid-container .detalles-dos h5 {
     font-size: 15px;
@@ -1056,6 +1062,7 @@ footer .iconos-footer .icon-style:hover {
   }
   /*TIENDA*/
   .tienda-bienvenidos {
+    margin-left: 10px;
     margin-bottom: 15px;
   }
   .tienda-bienvenidos h1 {
@@ -1087,6 +1094,7 @@ footer .iconos-footer .icon-style:hover {
   }
   /*TIENDA*/
   .tienda-bienvenidos {
+    margin-left: 10px;
     margin-bottom: 15px;
   }
   .tienda-bienvenidos h1 {
@@ -1110,7 +1118,6 @@ footer .iconos-footer .icon-style:hover {
   }
   .grid-container .detalles-uno h5 {
     font-size: 15px;
-    margin-bottom: 50px;
   }
   .grid-container .detalles-dos h5 {
     font-size: 15px;
