--- a/scss/utilities/_media-queries.scss
+++ b/scss/utilities/_media-queries.scss
@@ -104,6 +104,7 @@
 
     /*TIENDA*/
     .tienda-bienvenidos {
+        margin-left: 10px;
         margin-bottom: 15px;
         h1 {
             font-size: 22px;
@@ -154,6 +155,7 @@
 
     /*TIENDA*/
     .tienda-bienvenidos {
+        margin-left: 10px;
         margin-bottom: 15px;
 
         h1 {
