--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*Media queries Desktop*/
 @media only screen and (max-width: 1400px) {
   /*INICIO*/
@@ -41,6 +42,25 @@
   .tienda-productos {
     margin-left: 10px;
     margin-right: 10px;
+  }
+  /*UBICACIÓN*/
+  .ubicacion {
+    font-size: 30px;
+    margin-top: 10px;
+  }
+  .mapa {
+    width: 100%;
+  }
+  .ubicacion-elementos {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+  .ubicacion-elementos .ubicacion-iconos {
+    font-size: 15px !important;
+    margin-right: 5px !important;
+  }
+  .ubicacion-elementos h5 {
+    font-size: 15px;
   }
 }
 /*Media queries Mobile*/
@@ -95,6 +115,25 @@
   }
   .contacto-general .contacto-redes p {
     font-size: 12px;
+  }
+  /*UBICACIÓN*/
+  .ubicacion {
+    font-size: 22px;
+    margin-top: 10px;
+  }
+  .mapa {
+    width: 100%;
+  }
+  .ubicacion-elementos {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+  .ubicacion-elementos .ubicacion-iconos {
+    font-size: 15px !important;
+    margin-right: 5px !important;
+  }
+  .ubicacion-elementos h5 {
+    font-size: 15px;
   }
 }
 @media only screen and (max-width: 415px) {
@@ -164,6 +203,25 @@
   }
   .contacto-general .contacto-redes p {
     font-size: 12px;
+  }
+  /*UBICACIÓN*/
+  .ubicacion {
+    font-size: 22px;
+    margin-top: 10px;
+  }
+  .mapa {
+    width: 100%;
+  }
+  .ubicacion-elementos {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+  .ubicacion-elementos .ubicacion-iconos {
+    font-size: 15px !important;
+    margin-right: 5px !important;
+  }
+  .ubicacion-elementos h5 {
+    font-size: 15px;
   }
 }
 @media only screen and (max-width: 414px) {
@@ -303,6 +361,25 @@ body .pagina-inicio .productos .links:hover {
     margin-left: 10px;
     margin-right: 10px;
   }
+  /*UBICACIÓN*/
+  .ubicacion {
+    font-size: 30px;
+    margin-top: 10px;
+  }
+  .mapa {
+    width: 100%;
+  }
+  .ubicacion-elementos {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+  .ubicacion-elementos .ubicacion-iconos {
+    font-size: 15px !important;
+    margin-right: 5px !important;
+  }
+  .ubicacion-elementos h5 {
+    font-size: 15px;
+  }
 }
 /*Media queries Mobile*/
 @media only screen and (max-width: 576px) {
@@ -356,6 +433,25 @@ body .pagina-inicio .productos .links:hover {
   }
   .contacto-general .contacto-redes p {
     font-size: 12px;
+  }
+  /*UBICACIÓN*/
+  .ubicacion {
+    font-size: 22px;
+    margin-top: 10px;
+  }
+  .mapa {
+    width: 100%;
+  }
+  .ubicacion-elementos {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+  .ubicacion-elementos .ubicacion-iconos {
+    font-size: 15px !important;
+    margin-right: 5px !important;
+  }
+  .ubicacion-elementos h5 {
+    font-size: 15px;
   }
 }
 @media only screen and (max-width: 415px) {
@@ -425,6 +521,25 @@ body .pagina-inicio .productos .links:hover {
   }
   .contacto-general .contacto-redes p {
     font-size: 12px;
+  }
+  /*UBICACIÓN*/
+  .ubicacion {
+    font-size: 22px;
+    margin-top: 10px;
+  }
+  .mapa {
+    width: 100%;
+  }
+  .ubicacion-elementos {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+  .ubicacion-elementos .ubicacion-iconos {
+    font-size: 15px !important;
+    margin-right: 5px !important;
+  }
+  .ubicacion-elementos h5 {
+    font-size: 15px;
   }
 }
 @media only screen and (max-width: 414px) {
@@ -539,6 +654,25 @@ h4 {
     margin-left: 10px;
     margin-right: 10px;
   }
+  /*UBICACIÓN*/
+  .ubicacion {
+    font-size: 30px;
+    margin-top: 10px;
+  }
+  .mapa {
+    width: 100%;
+  }
+  .ubicacion-elementos {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+  .ubicacion-elementos .ubicacion-iconos {
+    font-size: 15px !important;
+    margin-right: 5px !important;
+  }
+  .ubicacion-elementos h5 {
+    font-size: 15px;
+  }
 }
 /*Media queries Mobile*/
 @media only screen and (max-width: 576px) {
@@ -592,6 +726,25 @@ h4 {
   }
   .contacto-general .contacto-redes p {
     font-size: 12px;
+  }
+  /*UBICACIÓN*/
+  .ubicacion {
+    font-size: 22px;
+    margin-top: 10px;
+  }
+  .mapa {
+    width: 100%;
+  }
+  .ubicacion-elementos {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+  .ubicacion-elementos .ubicacion-iconos {
+    font-size: 15px !important;
+    margin-right: 5px !important;
+  }
+  .ubicacion-elementos h5 {
+    font-size: 15px;
   }
 }
 @media only screen and (max-width: 415px) {
@@ -661,6 +814,25 @@ h4 {
   }
   .contacto-general .contacto-redes p {
     font-size: 12px;
+  }
+  /*UBICACIÓN*/
+  .ubicacion {
+    font-size: 22px;
+    margin-top: 10px;
+  }
+  .mapa {
+    width: 100%;
+  }
+  .ubicacion-elementos {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+  .ubicacion-elementos .ubicacion-iconos {
+    font-size: 15px !important;
+    margin-right: 5px !important;
+  }
+  .ubicacion-elementos h5 {
+    font-size: 15px;
   }
 }
 @media only screen and (max-width: 414px) {
@@ -785,6 +957,25 @@ h1 {
     margin-left: 10px;
     margin-right: 10px;
   }
+  /*UBICACIÓN*/
+  .ubicacion {
+    font-size: 30px;
+    margin-top: 10px;
+  }
+  .mapa {
+    width: 100%;
+  }
+  .ubicacion-elementos {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+  .ubicacion-elementos .ubicacion-iconos {
+    font-size: 15px !important;
+    margin-right: 5px !important;
+  }
+  .ubicacion-elementos h5 {
+    font-size: 15px;
+  }
 }
 /*Media queries Mobile*/
 @media only screen and (max-width: 576px) {
@@ -838,6 +1029,25 @@ h1 {
   }
   .contacto-general .contacto-redes p {
     font-size: 12px;
+  }
+  /*UBICACIÓN*/
+  .ubicacion {
+    font-size: 22px;
+    margin-top: 10px;
+  }
+  .mapa {
+    width: 100%;
+  }
+  .ubicacion-elementos {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+  .ubicacion-elementos .ubicacion-iconos {
+    font-size: 15px !important;
+    margin-right: 5px !important;
+  }
+  .ubicacion-elementos h5 {
+    font-size: 15px;
   }
 }
 @media only screen and (max-width: 415px) {
@@ -908,6 +1118,25 @@ h1 {
   .contacto-general .contacto-redes p {
     font-size: 12px;
   }
+  /*UBICACIÓN*/
+  .ubicacion {
+    font-size: 22px;
+    margin-top: 10px;
+  }
+  .mapa {
+    width: 100%;
+  }
+  .ubicacion-elementos {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+  .ubicacion-elementos .ubicacion-iconos {
+    font-size: 15px !important;
+    margin-right: 5px !important;
+  }
+  .ubicacion-elementos h5 {
+    font-size: 15px;
+  }
 }
 @media only screen and (max-width: 414px) {
   .tienda-bienvenidos {
@@ -941,6 +1170,249 @@ h1 {
   margin-top: 30px;
 }
 
+/*Media queries Desktop*/
+@media only screen and (max-width: 1400px) {
+  /*INICIO*/
+  .pagina-inicio .productos .productos-img {
+    margin-right: 5px;
+    margin-left: 5px;
+    margin-bottom: 30px;
+  }
+}
+@media only screen and (max-width: 1200px) {
+  /*INICIO*/
+  .pagina-inicio .productos .productos-img {
+    margin-bottom: 30px;
+  }
+}
+/*Media queries Tablet*/
+@media only screen and (max-width: 992px) {
+  /*HEADER*/
+  .navbar .nav-style .header-logo {
+    height: 80px;
+  }
+  /*INICIO*/
+  .pagina-inicio .productos .productos-img {
+    margin-right: 15px;
+    margin-left: 15px;
+    margin-bottom: 30px;
+  }
+}
+@media only screen and (max-width: 768px) {
+  /*HEADER*/
+  .navbar .nav-style .header-logo {
+    height: 80px;
+  }
+  /*INICIO*/
+  .pagina-inicio .productos .productos-img {
+    margin-right: 15px;
+    margin-left: 15px;
+    margin-bottom: 30px;
+  }
+  /*TIENDA*/
+  .tienda-productos {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+  /*UBICACIÓN*/
+  .ubicacion {
+    font-size: 30px;
+    margin-top: 10px;
+  }
+  .mapa {
+    width: 100%;
+  }
+  .ubicacion-elementos {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+  .ubicacion-elementos .ubicacion-iconos {
+    font-size: 15px !important;
+    margin-right: 5px !important;
+  }
+  .ubicacion-elementos h5 {
+    font-size: 15px;
+  }
+}
+/*Media queries Mobile*/
+@media only screen and (max-width: 576px) {
+  /*HEADER*/
+  .navbar .nav-style .header-logo {
+    height: 80px;
+  }
+  /*INICIO*/
+  .pagina-inicio .productos .productos-img {
+    margin-right: 15px;
+    margin-left: 15px;
+    margin-bottom: 30px;
+  }
+  /*TIENDA*/
+  .tienda-bienvenidos {
+    margin-left: 10px;
+    margin-bottom: 15px;
+  }
+  .tienda-bienvenidos h1 {
+    font-size: 22px;
+  }
+  h4 {
+    font-size: 20px;
+  }
+  .tienda-productos {
+    margin-left: 15px;
+    margin-right: 15px;
+  }
+  .tienda-productos img {
+    height: 280px;
+    transition: none !important;
+    transition-duration: none !important;
+  }
+  .tienda-productos img:hover {
+    transition: none !important;
+  }
+  /*CONTACTO*/
+  .contacto-general .contactanos {
+    font-size: 30px;
+  }
+  .contacto-general .contacto-redes a {
+    font-size: 12px;
+  }
+  .contacto-general .contacto-redes .contacto-icons {
+    font-size: 15px !important;
+    padding: 8px !important;
+  }
+  .contacto-general .contacto-redes h5 {
+    font-size: 25px !important;
+    margin-right: 20px;
+  }
+  .contacto-general .contacto-redes p {
+    font-size: 12px;
+  }
+  /*UBICACIÓN*/
+  .ubicacion {
+    font-size: 22px;
+    margin-top: 10px;
+  }
+  .mapa {
+    width: 100%;
+  }
+  .ubicacion-elementos {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+  .ubicacion-elementos .ubicacion-iconos {
+    font-size: 15px !important;
+    margin-right: 5px !important;
+  }
+  .ubicacion-elementos h5 {
+    font-size: 15px;
+  }
+}
+@media only screen and (max-width: 415px) {
+  /*HEADER*/
+  .navbar .nav-style .header-logo {
+    height: 80px;
+  }
+  /*INICIO*/
+  .tienda-bienvenidos h1 {
+    font-size: 5px;
+  }
+  .pagina-inicio .productos .productos-img {
+    margin-right: 8px;
+    margin-left: 8px;
+    margin-bottom: 30px;
+  }
+  .pagina-inicio .productos .productos-img .tipos {
+    height: 200px;
+  }
+  .pagina-inicio .productos .productos-img .tipos:hover {
+    height: 220px;
+  }
+  /*TIENDA*/
+  .tienda-bienvenidos {
+    margin-left: 10px;
+  }
+  .tienda-bienvenidos .tienda-h1 {
+    font-size: 25px;
+  }
+  h4 {
+    font-size: 20px;
+  }
+  /*CURSOS*/
+  .grid-container {
+    grid-template-columns: 1fr;
+    grid-template-rows: 40px 150px 20px 150px 20px;
+    grid-template-areas: "cursos" "curso1" "detalles1" "curso2" "detalles2";
+  }
+  .grid-container .cursos h1 {
+    font-size: 18px;
+    margin-top: 5px;
+  }
+  .grid-container .curso-img {
+    height: 120px;
+  }
+  .grid-container .detalles-uno h5 {
+    font-size: 15px;
+  }
+  .grid-container .detalles-dos h5 {
+    font-size: 15px;
+    margin-top: 25px;
+  }
+  /*CONTACTO*/
+  .contacto-general .contactanos {
+    font-size: 30px;
+  }
+  .contacto-general .contacto-redes a {
+    font-size: 12px;
+  }
+  .contacto-general .contacto-redes .contacto-icons {
+    font-size: 15px !important;
+    padding: 8px !important;
+  }
+  .contacto-general .contacto-redes h5 {
+    font-size: 25px !important;
+    margin-right: 20px;
+  }
+  .contacto-general .contacto-redes p {
+    font-size: 12px;
+  }
+  /*UBICACIÓN*/
+  .ubicacion {
+    font-size: 22px;
+    margin-top: 10px;
+  }
+  .mapa {
+    width: 100%;
+  }
+  .ubicacion-elementos {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+  .ubicacion-elementos .ubicacion-iconos {
+    font-size: 15px !important;
+    margin-right: 5px !important;
+  }
+  .ubicacion-elementos h5 {
+    font-size: 15px;
+  }
+}
+@media only screen and (max-width: 414px) {
+  .tienda-bienvenidos {
+    margin-left: 5px;
+    margin-right: 5px;
+  }
+  .tienda-bienvenidos .tienda-h1 {
+    font-size: 20px;
+  }
+  h4 {
+    font-size: 16px;
+  }
+  h5 {
+    font-size: 15px;
+  }
+  .tienda-clases {
+    margin-bottom: 10px;
+  }
+}
 .contacto-general {
   display: flex;
   flex-direction: column;
@@ -976,192 +1448,6 @@ h1 {
   margin-right: 15px;
 }
 
-/*Media queries Desktop*/
-@media only screen and (max-width: 1400px) {
-  /*INICIO*/
-  .pagina-inicio .productos .productos-img {
-    margin-right: 5px;
-    margin-left: 5px;
-    margin-bottom: 30px;
-  }
-}
-@media only screen and (max-width: 1200px) {
-  /*INICIO*/
-  .pagina-inicio .productos .productos-img {
-    margin-bottom: 30px;
-  }
-}
-/*Media queries Tablet*/
-@media only screen and (max-width: 992px) {
-  /*HEADER*/
-  .navbar .nav-style .header-logo {
-    height: 80px;
-  }
-  /*INICIO*/
-  .pagina-inicio .productos .productos-img {
-    margin-right: 15px;
-    margin-left: 15px;
-    margin-bottom: 30px;
-  }
-}
-@media only screen and (max-width: 768px) {
-  /*HEADER*/
-  .navbar .nav-style .header-logo {
-    height: 80px;
-  }
-  /*INICIO*/
-  .pagina-inicio .productos .productos-img {
-    margin-right: 15px;
-    margin-left: 15px;
-    margin-bottom: 30px;
-  }
-  /*TIENDA*/
-  .tienda-productos {
-    margin-left: 10px;
-    margin-right: 10px;
-  }
-}
-/*Media queries Mobile*/
-@media only screen and (max-width: 576px) {
-  /*HEADER*/
-  .navbar .nav-style .header-logo {
-    height: 80px;
-  }
-  /*INICIO*/
-  .pagina-inicio .productos .productos-img {
-    margin-right: 15px;
-    margin-left: 15px;
-    margin-bottom: 30px;
-  }
-  /*TIENDA*/
-  .tienda-bienvenidos {
-    margin-left: 10px;
-    margin-bottom: 15px;
-  }
-  .tienda-bienvenidos h1 {
-    font-size: 22px;
-  }
-  h4 {
-    font-size: 20px;
-  }
-  .tienda-productos {
-    margin-left: 15px;
-    margin-right: 15px;
-  }
-  .tienda-productos img {
-    height: 280px;
-    transition: none !important;
-    transition-duration: none !important;
-  }
-  .tienda-productos img:hover {
-    transition: none !important;
-  }
-  /*CONTACTO*/
-  .contacto-general .contactanos {
-    font-size: 30px;
-  }
-  .contacto-general .contacto-redes a {
-    font-size: 12px;
-  }
-  .contacto-general .contacto-redes .contacto-icons {
-    font-size: 15px !important;
-    padding: 8px !important;
-  }
-  .contacto-general .contacto-redes h5 {
-    font-size: 25px !important;
-    margin-right: 20px;
-  }
-  .contacto-general .contacto-redes p {
-    font-size: 12px;
-  }
-}
-@media only screen and (max-width: 415px) {
-  /*HEADER*/
-  .navbar .nav-style .header-logo {
-    height: 80px;
-  }
-  /*INICIO*/
-  .tienda-bienvenidos h1 {
-    font-size: 5px;
-  }
-  .pagina-inicio .productos .productos-img {
-    margin-right: 8px;
-    margin-left: 8px;
-    margin-bottom: 30px;
-  }
-  .pagina-inicio .productos .productos-img .tipos {
-    height: 200px;
-  }
-  .pagina-inicio .productos .productos-img .tipos:hover {
-    height: 220px;
-  }
-  /*TIENDA*/
-  .tienda-bienvenidos {
-    margin-left: 10px;
-  }
-  .tienda-bienvenidos .tienda-h1 {
-    font-size: 25px;
-  }
-  h4 {
-    font-size: 20px;
-  }
-  /*CURSOS*/
-  .grid-container {
-    grid-template-columns: 1fr;
-    grid-template-rows: 40px 150px 20px 150px 20px;
-    grid-template-areas: "cursos" "curso1" "detalles1" "curso2" "detalles2";
-  }
-  .grid-container .cursos h1 {
-    font-size: 18px;
-    margin-top: 5px;
-  }
-  .grid-container .curso-img {
-    height: 120px;
-  }
-  .grid-container .detalles-uno h5 {
-    font-size: 15px;
-  }
-  .grid-container .detalles-dos h5 {
-    font-size: 15px;
-    margin-top: 25px;
-  }
-  /*CONTACTO*/
-  .contacto-general .contactanos {
-    font-size: 30px;
-  }
-  .contacto-general .contacto-redes a {
-    font-size: 12px;
-  }
-  .contacto-general .contacto-redes .contacto-icons {
-    font-size: 15px !important;
-    padding: 8px !important;
-  }
-  .contacto-general .contacto-redes h5 {
-    font-size: 25px !important;
-    margin-right: 20px;
-  }
-  .contacto-general .contacto-redes p {
-    font-size: 12px;
-  }
-}
-@media only screen and (max-width: 414px) {
-  .tienda-bienvenidos {
-    margin-left: 5px;
-    margin-right: 5px;
-  }
-  .tienda-bienvenidos .tienda-h1 {
-    font-size: 20px;
-  }
-  h4 {
-    font-size: 16px;
-  }
-  h5 {
-    font-size: 15px;
-  }
-  .tienda-clases {
-    margin-bottom: 10px;
-  }
-}
 body {
   background-color: #f6e7d6;
 }
@@ -1220,6 +1506,25 @@ h1 {
     margin-left: 10px;
     margin-right: 10px;
   }
+  /*UBICACIÓN*/
+  .ubicacion {
+    font-size: 30px;
+    margin-top: 10px;
+  }
+  .mapa {
+    width: 100%;
+  }
+  .ubicacion-elementos {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+  .ubicacion-elementos .ubicacion-iconos {
+    font-size: 15px !important;
+    margin-right: 5px !important;
+  }
+  .ubicacion-elementos h5 {
+    font-size: 15px;
+  }
 }
 /*Media queries Mobile*/
 @media only screen and (max-width: 576px) {
@@ -1273,6 +1578,25 @@ h1 {
   }
   .contacto-general .contacto-redes p {
     font-size: 12px;
+  }
+  /*UBICACIÓN*/
+  .ubicacion {
+    font-size: 22px;
+    margin-top: 10px;
+  }
+  .mapa {
+    width: 100%;
+  }
+  .ubicacion-elementos {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+  .ubicacion-elementos .ubicacion-iconos {
+    font-size: 15px !important;
+    margin-right: 5px !important;
+  }
+  .ubicacion-elementos h5 {
+    font-size: 15px;
   }
 }
 @media only screen and (max-width: 415px) {
@@ -1342,6 +1666,25 @@ h1 {
   }
   .contacto-general .contacto-redes p {
     font-size: 12px;
+  }
+  /*UBICACIÓN*/
+  .ubicacion {
+    font-size: 22px;
+    margin-top: 10px;
+  }
+  .mapa {
+    width: 100%;
+  }
+  .ubicacion-elementos {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+  .ubicacion-elementos .ubicacion-iconos {
+    font-size: 15px !important;
+    margin-right: 5px !important;
+  }
+  .ubicacion-elementos h5 {
+    font-size: 15px;
   }
 }
 @media only screen and (max-width: 414px) {
@@ -1472,6 +1815,25 @@ footer .iconos-footer .icon-style:hover {
     margin-left: 10px;
     margin-right: 10px;
   }
+  /*UBICACIÓN*/
+  .ubicacion {
+    font-size: 30px;
+    margin-top: 10px;
+  }
+  .mapa {
+    width: 100%;
+  }
+  .ubicacion-elementos {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+  .ubicacion-elementos .ubicacion-iconos {
+    font-size: 15px !important;
+    margin-right: 5px !important;
+  }
+  .ubicacion-elementos h5 {
+    font-size: 15px;
+  }
 }
 /*Media queries Mobile*/
 @media only screen and (max-width: 576px) {
@@ -1525,6 +1887,25 @@ footer .iconos-footer .icon-style:hover {
   }
   .contacto-general .contacto-redes p {
     font-size: 12px;
+  }
+  /*UBICACIÓN*/
+  .ubicacion {
+    font-size: 22px;
+    margin-top: 10px;
+  }
+  .mapa {
+    width: 100%;
+  }
+  .ubicacion-elementos {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+  .ubicacion-elementos .ubicacion-iconos {
+    font-size: 15px !important;
+    margin-right: 5px !important;
+  }
+  .ubicacion-elementos h5 {
+    font-size: 15px;
   }
 }
 @media only screen and (max-width: 415px) {
@@ -1594,6 +1975,25 @@ footer .iconos-footer .icon-style:hover {
   }
   .contacto-general .contacto-redes p {
     font-size: 12px;
+  }
+  /*UBICACIÓN*/
+  .ubicacion {
+    font-size: 22px;
+    margin-top: 10px;
+  }
+  .mapa {
+    width: 100%;
+  }
+  .ubicacion-elementos {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+  .ubicacion-elementos .ubicacion-iconos {
+    font-size: 15px !important;
+    margin-right: 5px !important;
+  }
+  .ubicacion-elementos h5 {
+    font-size: 15px;
   }
 }
 @media only screen and (max-width: 414px) {
