Página Inicio responsive

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -142,8 +142,8 @@
     height: 80px;
   }
   /*INICIO*/
-  .tienda-bienvenidos h1 {
-    font-size: 5px;
+  .productos-titulo h1 {
+    font-size: 28px;
   }
   .pagina-inicio .productos .productos-img {
     margin-right: 8px;
@@ -460,8 +460,8 @@ body .pagina-inicio .productos .links:hover {
     height: 80px;
   }
   /*INICIO*/
-  .tienda-bienvenidos h1 {
-    font-size: 5px;
+  .productos-titulo h1 {
+    font-size: 28px;
   }
   .pagina-inicio .productos .productos-img {
     margin-right: 8px;
@@ -753,8 +753,8 @@ h4 {
     height: 80px;
   }
   /*INICIO*/
-  .tienda-bienvenidos h1 {
-    font-size: 5px;
+  .productos-titulo h1 {
+    font-size: 28px;
   }
   .pagina-inicio .productos .productos-img {
     margin-right: 8px;
@@ -1056,8 +1056,8 @@ h1 {
     height: 80px;
   }
   /*INICIO*/
-  .tienda-bienvenidos h1 {
-    font-size: 5px;
+  .productos-titulo h1 {
+    font-size: 28px;
   }
   .pagina-inicio .productos .productos-img {
     margin-right: 8px;
@@ -1313,8 +1313,8 @@ h1 {
     height: 80px;
   }
   /*INICIO*/
-  .tienda-bienvenidos h1 {
-    font-size: 5px;
+  .productos-titulo h1 {
+    font-size: 28px;
   }
   .pagina-inicio .productos .productos-img {
     margin-right: 8px;
@@ -1605,8 +1605,8 @@ h1 {
     height: 80px;
   }
   /*INICIO*/
-  .tienda-bienvenidos h1 {
-    font-size: 5px;
+  .productos-titulo h1 {
+    font-size: 28px;
   }
   .pagina-inicio .productos .productos-img {
     margin-right: 8px;
@@ -1914,8 +1914,8 @@ footer .iconos-footer .icon-style:hover {
     height: 80px;
   }
   /*INICIO*/
-  .tienda-bienvenidos h1 {
-    font-size: 5px;
+  .productos-titulo h1 {
+    font-size: 28px;
   }
   .pagina-inicio .productos .productos-img {
     margin-right: 8px;
