--- a/scss/utilities/_media-queries.scss
+++ b/scss/utilities/_media-queries.scss
@@ -228,9 +228,9 @@
     }
 
     /*INICIO*/
-    .tienda-bienvenidos {
+    .productos-titulo {
         h1 {
-            font-size: 5px;
+            font-size: 28px;
         }
     }
 
