--- a/scss/utilities/_media-queries.scss
+++ b/scss/utilities/_media-queries.scss
@@ -24,6 +24,52 @@
             }
         }
     }
+
+
+
+    /*CURSOS*/
+    .grid-container {
+        
+
+        .cursos {
+            grid-area: cursos;
+            margin-top: 5px;
+
+            h1 {
+                font-size: 35px;
+            }
+        }
+
+        .curso-img {
+            height: 250px;
+        }
+
+        .curso-uno {
+            grid-area: curso1;
+        }
+
+        .detalles-uno {
+            grid-area: detalles1;
+
+            h5 {
+                font-size: 18px;
+            }
+
+        }
+
+        .curso-dos {
+            grid-area: curso2;
+        }
+        
+        .detalles-dos {
+            grid-area: detalles2;
+
+            h5 {
+                font-size: 18px;
+            }
+
+        }
+    }
 }
 
 
@@ -40,6 +86,8 @@
         }
     }
 
+
+
     /*INICIO*/
     .pagina-inicio {
         .productos {
@@ -48,6 +96,59 @@
                 margin-left: 15px;
                 margin-bottom: 30px;
             }
+        }
+    }
+
+
+
+    /*CURSOS*/
+    .grid-container {
+        grid-template-columns: 1fr;
+        grid-template-rows: 45px 200px 50px 200px 50px;
+        grid-template-areas: 
+        "cursos"
+        "curso1"
+        "detalles1"
+        "curso2"
+        "detalles2";
+
+        .cursos {
+            grid-area: cursos;
+
+            h1 {
+                font-size: 25px;
+                margin-top: 5px;
+            }
+        }
+
+        .curso-img {
+            height: 200px;
+        }
+
+        .curso-uno {
+            grid-area: curso1;
+        }
+
+        .detalles-uno {
+            grid-area: detalles1;
+
+            h5 {
+                font-size: 18px;
+            }
+
+        }
+
+        .curso-dos {
+            grid-area: curso2;
+        }
+        
+        .detalles-dos {
+            grid-area: detalles2;
+
+            h5 {
+                font-size: 18px;
+            }
+
         }
     }
 
@@ -64,6 +165,8 @@
         }
     }
 
+
+
     /*INICIO*/
     .pagina-inicio {
         .productos {
@@ -75,11 +178,68 @@
         }
     }
 
+
+
     /*TIENDA*/
     .tienda-productos {
         margin-left: 10px;
         margin-right: 10px;
     }
+
+
+
+    /*CURSOS*/
+    .grid-container {
+        grid-template-columns: 1fr;
+        grid-template-rows: 45px 200px 50px 200px 50px;
+        grid-template-areas: 
+        "cursos"
+        "curso1"
+        "detalles1"
+        "curso2"
+        "detalles2";
+
+        .cursos {
+            grid-area: cursos;
+
+            h1 {
+                font-size: 25px;
+                margin-top: 5px;
+            }
+        }
+
+        .curso-img {
+            height: 200px;
+        }
+
+        .curso-uno {
+            grid-area: curso1;
+        }
+
+        .detalles-uno {
+            grid-area: detalles1;
+
+            h5 {
+                font-size: 18px;
+            }
+
+        }
+
+        .curso-dos {
+            grid-area: curso2;
+        }
+        
+        .detalles-dos {
+            grid-area: detalles2;
+
+            h5 {
+                font-size: 18px;
+            }
+
+        }
+    }
+
+
 
     /*UBICACIÓN*/
     .ubicacion {
@@ -120,6 +280,8 @@
         }
     }
 
+
+
     /*INICIO*/
     .pagina-inicio {
         .productos {
@@ -130,6 +292,8 @@
             }
         }
     }
+
+
 
     /*TIENDA*/
     .tienda-bienvenidos {
@@ -157,6 +321,62 @@
             }
         }
     }
+
+
+
+    /*CURSOS*/
+    .grid-container {
+        grid-template-columns: 1fr;
+        grid-template-rows: 45px 200px 50px 200px 50px;
+        grid-template-areas: 
+        "cursos"
+        "curso1"
+        "detalles1"
+        "curso2"
+        "detalles2";
+
+        .cursos {
+            grid-area: cursos;
+            
+
+            h1 {
+                font-size: 20px;
+                margin-top: 5px;
+            }
+        }
+
+        .curso-img {
+            height: 200px;
+        }
+
+        .curso-uno {
+            grid-area: curso1;
+        }
+
+        .detalles-uno {
+            grid-area: detalles1;
+
+            h5 {
+                font-size: 15px;
+            }
+
+        }
+
+        .curso-dos {
+            grid-area: curso2;
+        }
+        
+        .detalles-dos {
+            grid-area: detalles2;
+
+            h5 {
+                font-size: 15px;
+            }
+
+        }
+    }
+
+    
 
     /*CONTACTO*/
     .contacto-general {
@@ -188,6 +408,8 @@
         }
         
     }
+
+
 
     /*UBICACIÓN*/
     .ubicacion {
@@ -227,6 +449,8 @@
         }
     }
 
+
+
     /*INICIO*/
     .productos-titulo {
         h1 {
@@ -252,6 +476,8 @@
         }
     }
 
+
+
     /*TIENDA*/
     .tienda-bienvenidos {
         margin-left: 10px;
@@ -266,10 +492,12 @@
         font-size: 20px;
     }
 
+
+
     /*CURSOS*/
     .grid-container {
         grid-template-columns: 1fr;
-        grid-template-rows: 40px 150px 20px 150px 20px;
+        grid-template-rows: 45px 150px 50px 150px 50px;
         grid-template-areas: 
         "cursos"
         "curso1"
@@ -278,6 +506,9 @@
         "detalles2";
 
         .cursos {
+            grid-area: cursos;
+            
+
             h1 {
                 font-size: 18px;
                 margin-top: 5px;
@@ -285,24 +516,37 @@
         }
 
         .curso-img {
-            height: 120px;
+            height: 150px;
+        }
+
+        .curso-uno {
+            grid-area: curso1;
         }
 
         .detalles-uno {
+            grid-area: detalles1;
+
             h5 {
-                font-size: 15px;
+                font-size: 12px;
             }
 
         }
 
+        .curso-dos {
+            grid-area: curso2;
+        }
+        
         .detalles-dos {
+            grid-area: detalles2;
+
             h5 {
-                font-size: 15px;
-                margin-top: 25px;
+                font-size: 12px;
             }
 
         }
     }
+
+
 
     /*CONTACTO*/
     .contacto-general {
@@ -335,6 +579,8 @@
         
     }
 
+
+
     /*UBICACIÓN*/
     .ubicacion {
         font-size: 22px;
@@ -358,4 +604,5 @@
             font-size: 15px;
         }
     }
+
 }
